--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,7 @@
-<<<<<<< HEAD
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-=======
+<% provide(:title, "Home") %>
 <h1>Sample App</h1>
 <p>
   This is the home page for the
   <a href="http://railstutorial.jp/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
->>>>>>> 6cd288fc32ded93ae407ca4afe0867fd36754286
